--- a/ODExplorer/ControlStyles/ControlStyles.xaml
+++ b/ODExplorer/ControlStyles/ControlStyles.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:ndata="clr-namespace:ODExplorer.NavData"
+                    xmlns:settings="clr-namespace:ODExplorer.AppSettings"
                     xmlns:utils="clr-namespace:ODExplorer.Utils">
-   
-    <utils:PlanetClassToImage x:Key="PlanetClassToImage" />
+    <settings:Settings x:Key="AppSettings" />
     <utils:GravityToColourConvertor x:Key="gravToColour" />
-    
+
     <Style x:Key="DataGridFont"
            TargetType="{x:Type TextBlock}">
         <Style.Triggers>
@@ -43,13 +43,17 @@
         </Style.Triggers>
     </Style>
 
-    <Style TargetType="{x:Type ToolTip}">
+    <Style TargetType="{x:Type ListView}">
         <Setter Property="Background"
                 Value="{DynamicResource PrimaryBackground}" />
         <Setter Property="Foreground"
                 Value="{DynamicResource PrimaryForeground}" />
         <Setter Property="BorderBrush"
-                Value="{DynamicResource PrimaryBorder}" />
+                Value="{x:Null}" />
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="Padding"
+                Value="0" />
     </Style>
 
     <Style TargetType="{x:Type ContextMenu}">
@@ -112,31 +116,73 @@
         </Style.Triggers>
     </Style>
 
+    <CollectionViewSource x:Key="ListCsv"
+                          Source="{Binding ElementName=BodyRectangle, Path=DataContext.IsPlanet}" />
+
     <Style x:Key="BodyRectangle"
            TargetType="{x:Type Rectangle}"
            BasedOn="{StaticResource Rectangle Style}">
+
         <Style.Triggers>
+            <DataTrigger Binding="{Binding PlanetImage}"
+                         Value="{x:Static ndata:PlanetImage.Planet}">
+                <Setter Property="OpacityMask">
+                    <Setter.Value>
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/planet.png" />
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+
+            <DataTrigger Binding="{Binding PlanetImage}"
+                         Value="{x:Static ndata:PlanetImage.Earth}">
+                <Setter Property="OpacityMask">
+                    <Setter.Value>
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/earth.png" />
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+
+            <DataTrigger Binding="{Binding PlanetImage}"
+                         Value="{x:Static ndata:PlanetImage.Water}">
+                <Setter Property="OpacityMask">
+                    <Setter.Value>
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/water.png" />
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+
+            <DataTrigger Binding="{Binding PlanetImage}"
+                         Value="{x:Static ndata:PlanetImage.Gas}">
+                <Setter Property="OpacityMask">
+                    <Setter.Value>
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/jupiter.png" />
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+
+            <DataTrigger Binding="{Binding PlanetImage}"
+                         Value="{x:Static ndata:PlanetImage.Default}">
+                <Setter Property="OpacityMask">
+                    <Setter.Value>
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/language.png" />
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+
             <DataTrigger Binding="{Binding IsStar}"
                          Value="True">
                 <Setter Property="OpacityMask">
                     <Setter.Value>
-                        <ImageBrush ImageSource="../Images/StarIcon.png" />
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/StarIcon.png" />
                     </Setter.Value>
                 </Setter>
             </DataTrigger>
+
             <DataTrigger Binding="{Binding IsNonBody}"
                          Value="True">
                 <Setter Property="OpacityMask">
                     <Setter.Value>
-                        <ImageBrush ImageSource="../Images/asteroid.png" />
-                    </Setter.Value>
-                </Setter>
-            </DataTrigger>
-            <DataTrigger Binding="{Binding IsPlanet}"
-                         Value="True">
-                <Setter Property="OpacityMask">
-                    <Setter.Value>
-                        <ImageBrush ImageSource="{Binding PlanetClass, Converter={StaticResource PlanetClassToImage}}" />
+                        <ImageBrush ImageSource="pack://application:,,,/ODExplorer;component/Images/asteroid.png" />
                     </Setter.Value>
                 </Setter>
             </DataTrigger>
@@ -1331,7 +1377,7 @@
                 <ControlTemplate TargetType="{x:Type Separator}">
                     <Border BorderBrush="{DynamicResource MenuBarBackground}"
                             BorderThickness="0"
-                            Background="{DynamicResource PrimaryBorder}"
+                            Background="{DynamicResource MenuBarSeperator}"
                             Height="1"
                             SnapsToDevicePixels="true" />
                 </ControlTemplate>
@@ -1401,30 +1447,30 @@
     <!--#region ComboBox-->
     <ControlTemplate x:Key="ComboBoxToggleButton"
                      TargetType="{x:Type ToggleButton}">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="20" />
-                </Grid.ColumnDefinitions>
-                <Border x:Name="Border"
-                        Grid.ColumnSpan="2"
-                        CornerRadius="0"
-                        Background="{DynamicResource PrimaryControlBackground}"
-                        BorderBrush="{DynamicResource PrimaryControlBorder}"
-                        BorderThickness="1" />
-                <Border Grid.Column="0"
-                        CornerRadius="0"
-                        Margin="1"
-                        Background="{DynamicResource PrimaryControlBackground}"
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="20" />
+            </Grid.ColumnDefinitions>
+            <Border x:Name="Border"
+                    Grid.ColumnSpan="2"
+                    CornerRadius="0"
+                    Background="{DynamicResource PrimaryControlBackground}"
                     BorderBrush="{DynamicResource PrimaryControlBorder}"
-                        BorderThickness="0,0,1,0" />
-                <Path x:Name="Arrow"
-                      Grid.Column="1"
-                      Fill="{DynamicResource PrimaryControlForeground}"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"
-                      Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z" />
-            </Grid>
+                    BorderThickness="1" />
+            <Border Grid.Column="0"
+                    CornerRadius="0"
+                    Margin="1"
+                    Background="{DynamicResource PrimaryControlBackground}"
+                    BorderBrush="{DynamicResource PrimaryControlBorder}"
+                    BorderThickness="0,0,1,0" />
+            <Path x:Name="Arrow"
+                  Grid.Column="1"
+                  Fill="{DynamicResource PrimaryControlForeground}"
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Center"
+                  Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z" />
+        </Grid>
     </ControlTemplate>
 
     <ControlTemplate x:Key="ComboBoxTextBox"
@@ -1590,5 +1636,41 @@
         </Setter>
     </Style>
     <!--#endregion-->
+
+    <Style TargetType="{x:Type ToolTip}">
+        <Setter Property="Background"
+                Value="{DynamicResource PrimaryBackground}" />
+        <Setter Property="Foreground"
+                Value="{DynamicResource PrimaryForeground}" />
+        <Setter Property="BorderBrush"
+                Value="{DynamicResource PrimaryBorder}" />
+        <Setter Property="FontFamily"
+                Value="EuroStile" />
+        <Setter Property="FontSize"
+                Value="14" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToolTip}">
+                    <Border x:Name="Border"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Background="{TemplateBinding Background}"
+                            SnapsToDevicePixels="True">
+                        <Border.LayoutTransform>
+                            <ScaleTransform ScaleX="{Binding Source={StaticResource AppSettings}, Path=SettingsInstance.Value.UiScale}"
+                                            ScaleY="{Binding Source={StaticResource AppSettings}, Path=SettingsInstance.Value.UiScale}" />
+                        </Border.LayoutTransform>
+                        <ContentPresenter ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          Content="{TemplateBinding Content}"
+                                          ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          Margin="{TemplateBinding Padding}"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
