--- a/ODExplorer/ControlStyles/DataGridStyles.xaml
+++ b/ODExplorer/ControlStyles/DataGridStyles.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:ndata="clr-namespace:ODExplorer.NavData"
-                    xmlns:CsvParser="clr-namespace:ParserLibrary;assembly=ParserLibrary"
-                    xmlns:utils="clr-namespace:ODExplorer.Utils">
+                    xmlns:utils="clr-namespace:ODExplorer.Utils"
+                    xmlns:CsvParser="clr-namespace:ParserLibrary;assembly=ParserLibrary">
 
     <utils:IntToVisibilityConverter x:Key="intToVis" />
-    
+
     <!--#region DataGrid settings-->
     <Style x:Key="DataGrid Settings"
            TargetType="{x:Type DataGrid}">
@@ -213,9 +213,15 @@
         <Setter Property="FocusVisualStyle"
                 Value="{x:Null}" />
         <Setter Property="IsHitTestVisible"
-                Value="False" />
+                Value="True" />
         <Setter Property="Margin"
                 Value="0" />
+        <Setter Property="ToolTip"
+                Value="{Binding ToolTip}">
+            <!--<Setter.Value>
+                <TextBlock Text="{Binding BodyNameLocal,  StringFormat={}{0} Work}" />
+            </Setter.Value>-->
+        </Setter>
         <Style.Triggers>
             <DataTrigger Binding="{Binding Status}"
                          Value="{x:Static ndata:DiscoveryStatus.Discovered}">
@@ -440,6 +446,25 @@
                 Value="{DynamicResource DataGridRowKnownBodyForeGround}" />
     </Style>
 
+    <Style TargetType="{x:Type DataGridCell}"
+           x:Key="ToolTipCells">
+        <Setter Property="IsHitTestVisible"
+                Value="False" />
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="Margin"
+                Value="0" />
+        <Setter Property="FocusVisualStyle"
+                Value="{x:Null}" />
+        <Setter Property="Background"
+                Value="{DynamicResource PrimaryBackground}" />
+        <Setter Property="Foreground"
+                Value="{DynamicResource PrimaryForeground}" />
+        <Setter Property="BorderBrush"
+                Value="{x:Null}" />
+        <Setter Property="BorderThickness"
+                Value="0" />
+    </Style>
     <!--#endregion-->
 
     <!--#region DataGrid Templates-->
